--- a/index.html
+++ b/index.html
@@ -4,6 +4,21 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>来码笔记</title>
+
+    <link rel='stylesheet' href='/static/excel/plugins/css/pluginsCss.css'></link>
+    <link rel='stylesheet' href='/static/excel/plugins/plugins.css'></link>
+    <link rel='stylesheet' href='/static/excel/css/luckysheet.css'></link>
+    <link rel='stylesheet' href='/static/excel/iconfont/iconfont.css'></link>
+    <script src="/static/excel/plugins/js/plugin.js"></script>
+    <script src="/static/excel/luckysheet.umd.js"></script>
+
+    <!--  <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/luckysheet/dist/plugins/css/pluginsCss.css' />
+      <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/luckysheet/dist/plugins/plugins.css' />
+      <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/luckysheet/dist/css/luckysheet.css' />
+      <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/luckysheet/dist/assets/iconfont/iconfont.css' />
+      <script src="https://cdn.jsdelivr.net/npm/luckysheet/dist/plugins/js/plugin.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/luckysheet/dist/luckysheet.umd.js"></script>-->
+
   </head>
   <body>
     <div id="app"></div>
